Fixed alignment of contact phone number on mobile view

--- a/inc/css/header.css
+++ b/inc/css/header.css
@@ -14,6 +14,13 @@
     }
 }
 
+@media (max-width: 767px) {
+    .header-contact-section {
+        left: auto;
+        width: 100%;
+    }
+}
+
 .social-icons {
     text-align: center;
 }
